0.09
 - Add check for 008 field with continuing resource currently published.
 - Add check for 040a field.
 - Update copyright years.

0.08 2025-11-28T12:34:20+01:00
 - Add another error check for duplicate 035a field.

0.07 2025-11-14T15:39:34+01:00
 - Add ACKNOWLEDGEMENTS section to doc.
 - Add plugin for 035 field to check unique 035a.
 - Fix ERRORS section in Abstract class doc.
 - Regen example in doc.

0.06 2025-10-31T14:37:54+01:00
 - Fix check in case of invalid leader in Field008 plugin.
 - Fix check in case of invalid leader in Field040 plugin.
 - Fix field 008 presence.
 - Fix field 040e presence.
 - Rewrite identification of record id for reporting. Default value is
   control field 001. We could change it by definition of 'error_id_def'
   parameter.

0.05 2025-10-30T08:35:46+01:00
 - Fix REPOSITORY section in doc.
 - Fix check of 040 field with RDA rules.

0.04 2025-10-03T01:14:41+02:00
 - Add plugin for field 040e with leader 018 a.

0.03 2025-09-28T20:34:58+02:00
 - Add test for bad ISBN (field 020a).
 - Add test for record without ISB (field 020a).
 - Fix dependencies.

0.02 2025-09-28T09:09:10+02:00
 - Add add_error() helper function.
 - Add validation for field 020a ISBN.
 - Regen doc EXAMPLE.

0.01 2025-07-02T21:32:38+02:00
 - First version.