@@ -33,7 +33,7 @@ requires:
   English: 0
   Error::Pure: 0
   MARC::Field008: 0
-  MARC::Leader: 0.04
+  MARC::Leader: 0.08
   Mo::utils: 0.06
   Mo::utils::Hash: 0
   Module::Pluggable: 0
