@@ -1,6 +1,7 @@
 0.09
  - Add check for 008 field with continuing resource currently published.
  - Add check for 040a field.
+ - Add tests for bad leader to field_008 and field_040 plugins.
  - Update copyright years.
 
 0.08 2025-11-28T12:34:20+01:00
